<resources>
    <string name="app_name">Tienda-Eco</string>
    <string name="impacto_ecologico">Impacto Ecológico</string>
    <string name="parrafo1">Debido al impacto ambiental siendo las acciones humanas las que modifican el ambiente, Tienda-ECO\nse compromete a elaborar sus productos de manera artesanal y con materiales que favorecen al cuidado del medio ambiente.</string>
    <string name="log_in">Ingresar</string>
    <string name="registro">Registrate</string>
    <string name="agregar">Agregar</string>
    <string name="registro_titulo">Ingresa Tus Datos</string>
    <string name="nombre">Nombre - Apellidos</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion</string>
    <string name="SeccionCuidado">Cuidado de la Salud</string>
    <string name="SeccionDecoracion">Decoración del Hogar</string>
    <string name="Cepillo">Cepillo de bambú</string>
    <string name="DescripcionCepillo">Paquete de 2 unidades\nMaterial: Bambú 100% natural\nDuración: 3 meses\nRespetuoso con el medio ambiente</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Comprar">Comprar</string>
    <string name="IngresoGoogle">Ingresar con Google</string>
    <string name="Ubicacion1">Ubicacion 1</string>
    <string name="Ubicacion2">Ubicacion 2</string>
    <string name="Ubicacion3">Ubicacion 3</string>
    <string name="Mapa">Mapa Tiendas</string>
    <string name="captured_image">Captura</string>
    <string name="Tomar_Foto">Tomar Foto</string>
    <string name="Ver_Galeria">Ver Galeria</string>
    <string name="Mis_Fotos">Mis Fotos</string>
    <string name="Sin_Fotos">No hay fotos</string>
    <string name="Miniatura_de_foto">Miniatura de foto</string>

</resources>