<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">

    <!-- El mapa ocupará la mayor parte de la pantalla -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Botones sencillos para cambiar la ubicación -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLocation1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/cuarto_color"
            android:textColor="@color/primer_color_texto"
            android:text="@string/Ubicacion1" />

        <Button
            android:id="@+id/btnLocation2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/cuarto_color"
            android:textColor="@color/primer_color_texto"
            android:text="@string/Ubicacion2" />

        <Button
            android:id="@+id/btnLocation3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/cuarto_color"
            android:textColor="@color/primer_color_texto"
            android:text="@string/Ubicacion3" />

    </LinearLayout>

</LinearLayout>