<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:backgroundTint="@android:color/transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/producto_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imagen_producto"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:background="@drawable/producto_carta"
            android:scaleType="centerCrop"
            android:src="@drawable/toothbrush" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/Cepillo"
            android:textColor="@color/primer_color_texto"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/DescripcionCepillo"
            android:textColor="@color/primer_color_texto" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:backgroundTint="@color/cuarto_color"
            android:text="@string/agregar"
            android:textColor="@color/primer_color_texto"
            android:textStyle="bold"
            app:cornerRadius="50dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
