<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- Nombre de la tienda -->
    <TextView
        android:id="@+id/tvStoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primer_color_texto"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Iconos de usuario, favoritos, carrito -->
    <ImageView
        android:id="@+id/ivUserIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivFavoriteIcon"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/ivFavoriteIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/heart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivCartIcon"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/ivCartIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/shopping_cart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <!-- Imagen lateral -->

    <!-- Título Impacto Ecológico -->

    <ImageView
        android:id="@+id/ivSideImage"
        android:layout_width="175dp"
        android:layout_height="328dp"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/toallas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvStoreName"
        app:layout_constraintVertical_bias="0.066" />

    <!-- Texto de descripción -->

    <!-- Botón Conoce más -->

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="182dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/impacto_ecologico"
        android:textColor="@color/primer_color_texto"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivSideImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStoreName" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="168dp"
        android:layout_height="242dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/parrafo1"
        android:textColor="@color/primer_color_texto"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/ivSideImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btnLearnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/cuarto_color"
        android:text="@string/conoce_mas"
        android:textColor="@color/primer_color_texto"
        app:cornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>