<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvStoreName"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/app_name"
            android:textColor="@color/primer_color_texto"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Sección Cuidado de la Salud -->
        <TextView
            android:id="@+id/tvCuidadoSalud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SeccionCuidado"
            android:textColor="@color/primer_color_texto"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvStoreName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Producto 1 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="580dp"
            android:background="@drawable/producto_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:background="@drawable/producto_carta"
                android:scaleType="centerCrop"
                android:src="@drawable/toothbrush" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/Cepillo"
                android:textColor="@color/primer_color_texto"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/DescripcionCepillo"
                android:textColor="@color/primer_color_texto"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:backgroundTint="@color/cuarto_color"
                android:text="@string/agregar"
                android:textColor="@color/primer_color_texto"
                android:textStyle="bold"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- Producto 2 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="580dp"
            android:background="@drawable/producto_background"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:scaleType="centerCrop"
                android:background="@drawable/producto_carta"
                android:src="@drawable/toothbrush" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/Cepillo"
                android:textColor="@color/primer_color_texto"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/DescripcionCepillo"
                android:textColor="@color/primer_color_texto"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:backgroundTint="@color/cuarto_color"
                android:text="@string/agregar"
                android:textColor="@color/primer_color_texto"
                android:textStyle="bold"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

        </LinearLayout>

        <!-- Sección Decoración del hogar -->

        <TextView
            android:id="@+id/tvDecoracionHogar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SeccionDecoracion"
            android:textColor="@color/primer_color_texto"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvStoreName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- Producto 3 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="580dp"
            android:background="@drawable/producto_background2"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:background="@drawable/producto_carta"
                android:scaleType="centerCrop"
                android:src="@drawable/toothbrush" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/Cepillo"
                android:textColor="@color/segundo_color_texto"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/DescripcionCepillo"
                android:textColor="@color/segundo_color_texto"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:backgroundTint="@color/cuarto_color"
                android:text="@string/agregar"
                android:textColor="@color/primer_color_texto"
                android:textStyle="bold"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- Producto 4 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="580dp"
            android:background="@drawable/producto_background2"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:scaleType="centerCrop"
                android:background="@drawable/producto_carta"
                android:src="@drawable/toothbrush" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/Cepillo"
                android:textColor="@color/segundo_color_texto"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/DescripcionCepillo"
                android:textColor="@color/segundo_color_texto"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:backgroundTint="@color/cuarto_color"
                android:text="@string/agregar"
                android:textColor="@color/primer_color_texto"
                android:textStyle="bold"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
